Fix directory capitalisation for Images folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h3 class="header"> 	Contact Information </h3>
 				<p>	<span class="bold">Email:</span> s*******@hotmail.com </p>
 				<p>	<span class="bold">Phone:</span> 08******** </p>
-		<img class="image" src= "images/IMG_5041.jpg" alt="Portrait Photo of Steven smiling with long hair"/>
+		<img class="image" src= "Images/IMG_5041.jpg" alt="Portrait Photo of Steven smiling with long hair"/>
 		</br>
 		<a href="pages/CV/index.html">View CV</a>
 	</body>
