--- a/pages/CV/index.html
+++ b/pages/CV/index.html
@@ -45,7 +45,7 @@
 				</br>
 				</br>
 				<a href="https://www.instagram.com/stevenmarron1/" target="_blank" class="bold">
-				<img class="photologo" src="../../images/Marron Logo Black Purple.png" alt="Marron Photography logo where the r-o-n forms a camera shape"
+				<img class="photologo" src="../../Images/Marron Logo Black Purple.png" alt="Marron Photography logo where the r-o-n forms a camera shape"
 				</a></p>
 				</br>
 				<a href="../../index.html">Back to Cover Letter</a>
