Remove html file from directory links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<p>	<span class="bold">Phone:</span> 08******** </p>
 		<img class="image" src= "Images/IMG_5041.jpg" alt="Portrait Photo of Steven smiling with long hair"/>
 		</br>
-		<a href="pages/CV/index.html">View CV</a>
+		<a href="pages/CV/">View CV</a>
 	</body>
 
 
