--- a/pages/CV/index.html
+++ b/pages/CV/index.html
@@ -48,7 +48,7 @@
 				<img class="photologo" src="../../Images/Marron Logo Black Purple.png" alt="Marron Photography logo where the r-o-n forms a camera shape"
 				</a></p>
 				</br>
-				<a href="../../index.html">Back to Cover Letter</a>
+				<a href="../../">Back to Cover Letter</a>
 	</body>
 
 
