--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <html>
 	<head>
 		<title> Steven Marron Cover Letter </title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="styles/style.css"/>
 	</head>
 	<body>
+		<div class="row">
+			<div class="col-lg-5 col-sm-12 show">
 		<h1 class="header"> Cover Letter </h1>
 		<h1 id="pageTop" class="header">Name: Steven Marron </h1>
 			<h3 class="header"> 	Contact Information </h3>
 				<p>	<span class="bold">Email:</span> s*******@hotmail.com </p>
 				<p>	<span class="bold">Phone:</span> 08******** </p>
+			</div>
+			<div class="col-lg-5 col-sm-12 show">
 		<img class="image" src= "Images/IMG_5041.jpg" alt="Portrait Photo of Steven smiling with long hair"/>
 		</br>
 		<a href="pages/CV/">View CV</a>
+			</div>
+		</div>
 	</body>
-
-
 </html>
